--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,25 +1,347 @@
-
 /* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap');
 
-*{
+:root {
+    --light: #f6f6f9;
+    --primary: #0f0f0f;
+    --light-primary: #3e4042;
+    --grey: #eee;
+    --dark-grey: #AAAAAA;
+    --dark: #363949;
+    --danger: #D32F2F;
+    --light-danger: #FECDD3;
+    --warning: #FBC02D;
+    --light-warning: #FFF2C6;
+    --success: #388E3C;
+    --light-success: #BBF7D0;
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 
 }
-body{
-    
-   
+
+.bx {
+    font-size: 1.7rem;
 }
-main{
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+html {
+    overflow-x: hidden;
+}
+
+body {
+    background: var(--grey);
+    overflow-x: hidden;
+}
+
+/* student page */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--light);
+    width: 230px;
+    height: 100%;
+    z-index: 2000;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    transition: all 0.3s ease;
+}
+
+.sidebar::-webkit-scrollbar {
+    display: none;
+}
+
+.sidebar.close {
+    width: 60px;
+}
+
+.sidebar .logo {
+    font-size: 24px;
+    font-weight: 700;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    color: var(--primary);
+    z-index: 500;
+    padding-bottom: 20px;
+}
+
+.sidebar .logo .bx {
+    min-width: 60px;
+    display: flex;
+    justify-content: center;
+    font-size: 2.2rem;
+}
+
+.sidebar .side-menu {
+    width: 100%;
+    margin-top: 70px;
+
+}
+
+.sidebar .side-menu li {
+    height: 45px;
+    background: transparent;
+    margin-left: 10px;
+    margin-bottom: 12px;
+    border-radius: 10px;
+    padding: 5px;
+
+}
+
+.sidebar .side-menu li.active {
+    background-color: var(--grey);
+    position: relative;
+}
+
+.sidebar .side-menu li.active::before {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: -40px;
+    right: 0;
+    box-shadow: 20px 20px 0 var(--grey);
+    z-index: -1;
+}
+
+.sidebar .side-menu li.active::after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    bottom: -40px;
+    right: 0;
+    box-shadow: 20px -20px 0 var(--grey);
+    z-index: -1;
+}
+
+.sidebar .side-menu li a {
+    width: 100%;
+    height: 100%;
+    background: var(--light);
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    font-size: 16px;
+    color: var(--primary);
+    white-space: nowrap;
+    overflow-x: hidden;
+    transition: all 0.3s ease;
+}
+
+.sidebar .side-menu li.active a {
+    color: var(--success);
+}
+
+.sidebar.close .side-menu li a {
+    width: calc(48px - (4px * 2));
+    transition: all 0.3s ease;
+}
+
+.sidebar .side-menu li a .bx {
+    min-width: calc(60px - ((4px + 6px) * 2));
+    padding-right: 2px;
+    display: flex;
+    font-size: 1.6rem;
+    justify-content: center;
+}
+
+.sidebar .side-menu li a.logout {
+    color: var(--danger);
+}
+
+/* navbar */
+
+.content {
+    position: relative;
+    width: calc(100% - 230px);
+    left: 230px;
+    transition: all 0.3s ease ;
+      
+    
+}
+
+.sidebar.close~.content{
+    width: calc(100% - 60px);
+    left: 60px;
+}
+
+.content nav{
+    height: 56px;
+    background: var(--light);
+    padding: 0 24px 0 0;
+    display: flex;
+    align-items: center;
+    gap:24px ;
+    position: sticky;
+    top: 0;
+    left:0;
+    z-index: 1000;
+
+}
+
+.content nav::before{
+    content:"" ;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: -40px;
+    left: 0;
+    border-radius: 50%;
+    box-shadow: -20px -20px 0 var(--light);
+}
+
+.content nav a {
+    color: var(--dark);
+}
+
+.content nav.bx .bx-menu{
+    cursor: pointer;
+}
+
+.content nav form{
+    max-width: 400px;
+    width: 100%;
+    margin-right: auto;
+}
+
+.content nav form .form-input{
+    display: flex;
+    align-items: center;
+    height: 36px;
+}
+
+.content nav form .form-input input{
+    flex-grow: 1;
+    padding: 0 16px;
+    height: 100%;
+    border: none;
+    background: var(--grey);
+    border-radius: 36 0 0 36px;
+    outline: none;
+    width: 100%;
+    color: var(--dark);
+
+}
+
+.content nav form .form-input button{
+    width: 60px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary);
+    color: var(--light);
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 0 36px 36px 0;
+    cursor: pointer;
+
+
+}
+
+.content nav .notify{
+    font-size: 20px;
+    position:relative ;
+}
+
+.content nav .notify .count{
+    position: absolute;
+    top: -6px;
+    right: -6px;
+    width: 20px;
+    height:20px;
+    background: var(--danger);
+    border-radius: 50px;
+    color: var(--light);
+    border: 2px solid var(--light);
+    font-weight: 700;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content nav .profile img{
+    width: 36px;
+    height: 36px;
+    object-fit: cover;
+    border-radius: 50%;
+
+}
+
+@media screen and (max-width: 768px) {
+    .sidebar{
+        width: 200px;
+    }
+    
+}
+
+.content{
+    width: calc(100% - 60px);
+    left: 200px;
+}
+
+
+@media screen and (max-width:576px) {
+    .content nav form .form-input input{
+        display: none;
+    }
+    
+}
+
+.content nav form .form-input button{
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    color: var(--dark) ;
+    border-radius: none;
+}
+
+.content nav form.show .form-input input{
+    display: block;
+    width: 100%;
+} 
+
+.content nav form.show .form-input button{
+    width: 36px;
+    height: 100%;
+    color: var(--light);
+    background-color: var(--danger);
+    border-radius: 0 36px 36px 0;
+}
+.content nav form.show.notify, .content nav form.show~.profile{
+    display: none   ;
+}
+
+/* student page ends */
+main {
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+   
 }
-.login-container{
+
+.login-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,14 +349,17 @@ main{
     padding: 50px;
     border: solid 2px black;
     border-radius: 10px;
- 
+    background-color: white;
+
 }
-.login-container img{
+
+.login-container img {
     width: 100px;
     height: 100px;
 }
-.login-container .form-container .login-form{
-  
+
+.login-container .form-container .login-form {
+
     color: white;
     display: flex;
     flex-direction: column;
@@ -42,30 +367,33 @@ main{
     align-items: center;
     gap: 20px;
 }
-.login-container .form-container h2{
+
+.login-container .form-container h2 {
     padding: 10px;
     font-size: 40px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     font-weight: 700;
 }
-.login-container .form-container .login-form input{
+
+.login-container .form-container .login-form input {
     border: 1px solid black;
     border-radius: 5px;
     width: 100%;
     height: 40px;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     font-size: 15px;
     padding: 10px;
- 
+
 }
-.login-container .form-container .login-form button{
+
+.login-container .form-container .login-form button {
     margin-top: 10px;
     padding: 10px;
     width: 50%;
-    color:white; 
+    color: white;
     font-size: 15px;
     height: 40px;
-    background-color:black ;
+    background-color: black;
     border: 1px solid black;
     border-radius: 20px;
 }
