--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -57,11 +57,12 @@
                     password: password
                 }
             }).then((response) => {
-                console.log(response);
-              window.location.href = response.data
+              console.log(response.data.studentUrl)
+              window.location.href = response.data.studentUrl
             }).catch((error) => {
                 console.log(error);
             });
+
           
         })
                 
