--- a/src/views/student-main.ejs
+++ b/src/views/student-main.ejs
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title  %></title>
-</head>
+    <title>
+        <%= title %>
+    </title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+</head>-r
+
 <body>
-    <h1><%= title %></h1>
-    <h2>Welcome student </h2>
+    <!-- sidebar -->
+    <div class="sidebar ">
+        <a href="#" class="logo">
+            <i class='bx bx-book-open'></i>
+            <div class="logo-name"><span>USRMS</span></div>
+        </a>
+        <ul class="side-menu">
+            <li class="active"><a href="#"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
+            <li><a href="#"><i class='bx bx-user'></i>Personal Details</a></li>
+            <li><a href="#"><i class='bx bx-notepad'></i>Registration</a></li>
+            <li><a href="#"><i class='bx bx-money'></i>Payment</a></li>
+            <li><a href="#"><i class='bx bx-help-circle'></i>Support</a></li>
+
+        </ul>
+        <ul class="side-menu">
+            <li><a href="# " class="logout"><i class='bx bx-log-out-circle'></i>Logout</a> </li>
+        </ul>
+        <!-- end of sidebar -->
+
+    </div>
+
+     <!--Main Content  -->
+     <div class="content">
+
+        <!-- NavBar -->
+        <nav>
+            <i class="bx bx-menu"></i>
+            <form action="">
+                <div class="form-input">
+                    <input type="search" placeholder="Search....">
+                    <button class="search-btn" type="submit"><i class='bx bx-search'></i></button>
+                </div>
+            </form>
+            <a href="#" class="user"><%= student %></a>
+            <a href="#" class="notify">
+                <i class="bx bx-bell"></i>
+                <span class="count">12</span>
+            </a>
+            <a href="#" class="profile">
+                <img src="/images/go.png" alt="">
+            </a>
+        </nav>
+
+        <!-- end of navbar -->
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
