--- a/test/studentTest.css
+++ b/test/studentTest.css
@@ -1,4 +1,3 @@
-/* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap');
 
 :root {
@@ -35,22 +34,24 @@ a {
 li {
     list-style: none;
 }
-body{
+
+body {
     background-color: var(--grey);
 }
-.sidebar{
+
+.sidebar {
     position: fixed;
     z-index: 2000;
     height: 100%;
     padding-right: 5px;
     top: 0;
     left: 0;
-    background-color:var(--light) ;
-    width:250px;
+    background-color: var(--light);
+    width: 250px;
     overflow-x: hidden;
     scrollbar-width: none;
     transition: all 0.3s ease;
-   
+
 }
 
 .sidebar::-webkit-scrollbar {
@@ -59,8 +60,9 @@ body{
 
 .sidebar.close {
     width: 60px;
-    
+
 }
+
 .sidebar .logo {
     font-size: 24px;
     font-weight: 800;
@@ -72,15 +74,18 @@ body{
     z-index: 500;
     padding-bottom: 20px;
 }
-.sidebar .logo .logo-name{
+
+.sidebar .logo .logo-name {
     margin-left: 5px;
 }
+
 .sidebar .logo .fas {
     min-width: 60px;
     display: flex;
     justify-content: center;
     font-size: 2.2rem;
 }
+
 .sidebar .side-menu {
     width: 100%;
     margin-top: 70px;
@@ -96,11 +101,13 @@ body{
     padding: 5px;
 
 }
+
 .sidebar .side-menu li.active {
     background-color: var(--primary);
-   
+
     position: relative;
 }
+
 .sidebar .side-menu li a {
     width: 100%;
     height: 100%;
@@ -113,7 +120,8 @@ body{
     overflow-x: hidden;
     transition: all 0.3s ease;
 }
-.sidebar .side-menu li a:hover{
+
+.sidebar .side-menu li a:hover {
     transition: all 0.3s ease;
     background-color: var(--grey);
 }
@@ -122,6 +130,7 @@ body{
     width: calc(48px - (4px * 2));
     transition: all 0.3s ease;
 }
+
 .sidebar .side-menu li a .fas {
     min-width: calc(60px - ((4px + 6px) * 2));
     padding-right: 5px;
@@ -129,6 +138,7 @@ body{
     font-size: 1.6rem;
     justify-content: center;
 }
+
 .sidebar .side-menu li.active a {
     color: var(--light);
 }
@@ -137,21 +147,22 @@ body{
     color: var(--danger);
 }
 
-.sidebar.close~.content{
+.sidebar.close~.content {
     width: calc(100% - 60px);
     left: 60px;
 }
+
 /* nav bar */
-.content nav{
+.content nav {
     height: 56px;
     background: var(--light);
     padding: 0 24px 0 0;
     display: flex;
     align-items: center;
-    gap:24px ;
+    gap: 24px;
     position: sticky;
     top: 0;
-    left:0;
+    left: 0;
     z-index: 1000;
     width: 100%;
 
@@ -160,23 +171,24 @@ body{
 .content nav a {
     color: var(--dark);
 }
-.content nav.fas .fa-bars{
+
+.content nav.fas .fa-bars {
     cursor: pointer;
 }
 
-.content nav form{
+.content nav form {
     max-width: 400px;
     width: 100%;
     margin-right: auto;
 }
 
-.content nav form .form-input{
+.content nav form .form-input {
     display: flex;
     align-items: center;
     height: 36px;
 }
 
-.content nav form .form-input input{
+.content nav form .form-input input {
     flex-grow: 1;
     padding: 0 16px;
     height: 100%;
@@ -189,7 +201,7 @@ body{
 
 }
 
-.content nav form .form-input button{
+.content nav form .form-input button {
     width: 60px;
     height: 100%;
     display: flex;
@@ -206,17 +218,17 @@ body{
 
 }
 
-.content nav .notify{
+.content nav .notify {
     font-size: 20px;
-    position:relative ;
+    position: relative;
 }
 
-.content nav .notify .count{
+.content nav .notify .count {
     position: absolute;
     top: -6px;
     right: -6px;
     width: 20px;
-    height:20px;
+    height: 20px;
     background: var(--danger);
     border-radius: 50px;
     color: var(--light);
@@ -227,7 +239,8 @@ body{
     align-items: center;
     justify-content: center;
 }
-.content nav .profile img{
+
+.content nav .profile img {
     width: 36px;
     height: 36px;
     object-fit: cover;
@@ -236,96 +249,45 @@ body{
 }
 
 
-.content{
+.content {
     width: calc(100% - 250px);
     float: right;
-    
-}
-.content nav form.show.notify, .content nav form.show~.profile{
-    display: none   ;
+
 }
 
-@media (min-width:475px) {
-    
+.content nav form.show.notify,
+.content nav form.show~.profile {
+    display: none;
 }
-@media (min-width:640px) {
-    
-}
-@media (min-width:768px) {
-    
-}
-@media (min-width:1024px) {
-    
-}
-@media (min-width:1280px) {
-    
-}       
-@media (min-width:1536px) {
-    
-}     
 
-/* student page ends */
-main {
+/* registration page  */
+.holder {
     height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-} 
-.login-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
-    border: solid 2px black;
-    border-radius: 10px;
-    background-color: white;
-
+    float: right;
+    width: calc(100% - 250px);
 }
 
-.login-container img {
-    width: 120px;
-    height: 120px;
-}
-
-.login-container .form-container .login-form {
-
-    color: white;
+.regForm {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 20px;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    padding: 20px 0 0 20px;
 }
-
-.login-container .form-container h2 {
-    padding: 10px;
-    font-size: 40px;
-    /* font-family: sans-serif; */
-    font-weight: 700;
+.regForm .resType .resButton{
+    display: flex;
+    font-size: 30px;
+    font-weight: 600
 }
+@media (min-width:475px) {}
 
-.login-container .form-container .login-form input {
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 100%;
-    height: 40px;
-    /* font-family: sans-serif; */
-    font-size: 15px;
-    padding: 10px;
+@media (min-width:640px) {}
 
-}
+@media (min-width:768px) {}
 
-.login-container .form-container .login-form button {
-    margin-top: 10px;
-    padding: 10px;
-    width: 50%;
-    color: white;
-    font-size: 15px;
-    height: 40px;
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 20px;
-}
+@media (min-width:1024px) {}
+
+@media (min-width:1280px) {}
+
+@media (min-width:1536px) {}
