continuation of UI

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,11 @@
         <title></title>
     </head>
     <body>
-       <h1> <%= name %></h1>
+        <div class="holder">
+            <h1> DASHBOARD UNDER CONSTRUCTION</h1>
+        </div>
+        
+      
         
     </body>
     </html>
