--- a/src/views/student.ejs
+++ b/src/views/student.ejs
@@ -1,14 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>student</title>
 </head>
+
 <body>
     <%- include('layout/sideBar') %>
-   <h1 >DASHBOARD</h1>
-    
+        <div class="holder">
+            <form action="" class="regForm">
+                <label for="">Resident Type</label>
+                <div class="resType">
+
+                    <div class="resButton">
+                        <button class="active">Classic <br><span>click here to filter ></span></button>
+                        <button>Premium <br> <span>click here to filter ></span></button>
+                        <button>Regular <br> <span>click here to filter ></span></button>
+                        <button>Off Campus <br> <span>click here to filter ></span></button>
+                    </div>
+                </div>
+
+
+
+
+                <label for="">Resident Info</label>
+                <div class="table-info">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Select</th>
+                                <th>Residence ID</th>
+                                <th>Residence Name</th>
+                                <th>Room No</th>
+                                <th>Capacity</th>
+                                <th>Available</th>
+                                <th>Capacity</th>
+                                <th>Minimum Level</th>
+                                <th>Maximum Level</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><input type="checkbox" name="resSelect" class="resSelect" id=""></td>
+                                <td>1</td>
+                                <td>2</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>5</td>
+                                <td>6</td>
+                                <td>7</td>
+                                <td>8</td>
+                            </tr>
+                            <tr>
+                                <td><input type="checkbox" name="resSelect" class="resSelect" id=""></td>
+                                <td>1</td>
+                                <td>Samuel Akande</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>5</td>
+                                <td>6</td>
+                                <td>7</td>
+                                <td>8</td>
+                            </tr>
+                            <tr>
+                                <td><input type="checkbox" name="resSelect" class="resSelect" id=""></td>
+                                <td>1</td>
+                                <td>Bethel Splendor</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>5</td>
+                                <td>6</td>
+                                <td>7</td>
+                                <td>8</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <label for="hostel">Hostel:</label>
+                <div class="hostel">
+                    <div class="list-choice">
+                        <div class="list-choice-title">Select Block <span style="float: right; margin-top: -5px;"><i
+                                    class="fas fa-sort-down"></i></span> </div>
+                        <div class="list-choice-objects">
+                            <label>
+                                <input type="radio" name="month" /> <span>Block A</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="month" /> <span>Block B</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="month" /> <span>Block C</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="month" /> <span>Block D</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="month" /> <span>Block E</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="month" /> <span>Block F</span>
+                            </label>
+                        </div>
+                    </div>
+                    </select>
+                    <div class="roomNum">
+                        <label for="">Room No:</label>
+                        <input type="number" placeholder="1 - 32" class="num" min="1" max="32">
+                    </div>
+                    <div class="submitReg">
+                        <button type="submit">Next <i class="fas fa-arrow-right"></i></button>
+                    </div>
+
+                </div>
+            </form>
+
+        </div>
+
+
+
+
 </body>
+
 </html>
