--- a/src/views/Layout/sideBar.ejs
+++ b/src/views/Layout/sideBar.ejs
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Document</title>
-    <link rel="stylesheet" href="studentTest.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 
 <body>
     <!-- sidebar -->
-    <div class="sidebar   ">
+    <div class="sidebar">
         <a href="#" class="logo">
             <i class='fas fa-school'></i>
             <div class="logo-name"><span>UHMS</span></div>
@@ -19,11 +19,11 @@
 
 
         <ul class="side-menu">
-            <li class="active"><a href="#"> <i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
-            <li><a href="#"><i class='fas fa-address-card'></i>Registration</a></li>
-            <li><a href="#"><i class='fas fa-clipboard-list'></i>Exeat</a></li>
-            <li><a href="#"><i class='fas fa-credit-card'></i>Payment</a></li>
-            <li><a href="#"><i class='fas fa-circle-info'></i>Support</a></li>
+            <li class="active"><a href="/index"> <i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
+            <li ><a href="/student"><i class='fas fa-address-card'></i>Registration</a></li>
+            <li ><a href="#"><i class='fas fa-clipboard-list'></i>Exeat</a></li>
+            <li ><a href="#"><i class='fas fa-credit-card'></i>Payment</a></li>
+            <li ><a href="#"><i class='fas fa-circle-info'></i>Support</a></li>
 
         </ul>
         <ul class="side-menu out">
@@ -55,6 +55,8 @@
         </nav>
     </div>
     <!-- end of navbar -->
+    <script src="script.js"></script>
 </body>
+
 
 </html>
