student room database scema

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,7 @@
         <title></title>
     </head>
     <body>
+        <%- include('layout/sideBar')  %>
         <div class="holder">
             <h1> DASHBOARD UNDER CONSTRUCTION</h1>
         </div>
