--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -35,22 +35,24 @@ a {
 li {
     list-style: none;
 }
-body{
+
+body {
     background-color: var(--grey);
 }
-.sidebar{
+
+.sidebar {
     position: fixed;
     z-index: 2000;
     height: 100%;
     padding-right: 5px;
     top: 0;
     left: 0;
-    background-color:var(--light) ;
-    width:250px;
+    background-color: var(--light);
+    width: 250px;
     overflow-x: hidden;
     scrollbar-width: none;
     transition: all 0.3s ease;
-   
+
 }
 
 .sidebar::-webkit-scrollbar {
@@ -59,8 +61,9 @@ body{
 
 .sidebar.close {
     width: 60px;
-    
+
 }
+
 .sidebar .logo {
     font-size: 24px;
     font-weight: 800;
@@ -72,15 +75,18 @@ body{
     z-index: 500;
     padding-bottom: 20px;
 }
-.sidebar .logo .logo-name{
+
+.sidebar .logo .logo-name {
     margin-left: 5px;
 }
+
 .sidebar .logo .fas {
     min-width: 60px;
     display: flex;
     justify-content: center;
     font-size: 2.2rem;
 }
+
 .sidebar .side-menu {
     width: 100%;
     margin-top: 70px;
@@ -96,13 +102,16 @@ body{
     padding: 5px;
 
 }
+
 .sidebar .side-menu li.active {
     background-color: var(--primary);
     position: relative;
 }
-.sidebar .side-menu li.active:hover{
+
+.sidebar .side-menu li.active:hover {
     background: var(--primary);
-} 
+}
+
 .sidebar .side-menu li a {
     width: 100%;
     height: 100%;
@@ -115,7 +124,8 @@ body{
     overflow-x: hidden;
     transition: all 0.3s ease;
 }
-.sidebar .side-menu li:hover{
+
+.sidebar .side-menu li:hover {
     transition: all 0.3s ease;
     background-color: var(--grey);
 }
@@ -124,6 +134,7 @@ body{
     width: calc(48px - (4px * 2));
     transition: all 0.3s ease;
 }
+
 .sidebar .side-menu li a .fas {
     min-width: calc(60px - ((4px + 6px) * 2));
     padding-right: 5px;
@@ -131,6 +142,7 @@ body{
     font-size: 1.6rem;
     justify-content: center;
 }
+
 .sidebar .side-menu li.active a {
     color: var(--light);
 }
@@ -140,21 +152,22 @@ body{
     background: none !important;
 }
 
-.sidebar.close~.content{
+.sidebar.close~.content {
     width: calc(100% - 60px);
     left: 60px;
 }
+
 /* nav bar */
-.content nav{
+.content nav {
     height: 56px;
     background: var(--light);
     padding: 0 24px 0 0;
     display: flex;
     align-items: center;
-    gap:24px ;
+    gap: 24px;
     position: sticky;
     top: 0;
-    left:0;
+    left: 0;
     z-index: 1000;
     width: 100%;
 
@@ -163,23 +176,24 @@ body{
 .content nav a {
     color: var(--dark);
 }
-.content nav.fas .fa-bars{
+
+.content nav.fas .fa-bars {
     cursor: pointer;
 }
 
-.content nav form{
+.content nav form {
     max-width: 400px;
     width: 100%;
     margin-right: auto;
 }
 
-.content nav form .form-input{
+.content nav form .form-input {
     display: flex;
     align-items: center;
     height: 36px;
 }
 
-.content nav form .form-input input{
+.content nav form .form-input input {
     flex-grow: 1;
     padding: 0 16px;
     height: 100%;
@@ -192,7 +206,7 @@ body{
 
 }
 
-.content nav form .form-input button{
+.content nav form .form-input button {
     width: 60px;
     height: 100%;
     display: flex;
@@ -209,17 +223,17 @@ body{
 
 }
 
-.content nav .notify{
+.content nav .notify {
     font-size: 20px;
-    position:relative ;
+    position: relative;
 }
 
-.content nav .notify .count{
+.content nav .notify .count {
     position: absolute;
     top: -6px;
     right: -6px;
     width: 20px;
-    height:20px;
+    height: 20px;
     background: var(--danger);
     border-radius: 50px;
     color: var(--light);
@@ -230,7 +244,8 @@ body{
     align-items: center;
     justify-content: center;
 }
-.content nav .profile img{
+
+.content nav .profile img {
     width: 36px;
     height: 36px;
     object-fit: cover;
@@ -239,13 +254,15 @@ body{
 }
 
 
-.content{
+.content {
     width: calc(100% - 250px);
     float: right;
-    
+
 }
-.content nav form.show.notify, .content nav form.show~.profile{
-    display: none   ;
+
+.content nav form.show.notify,
+.content nav form.show~.profile {
+    display: none;
 }
 
 /* registration */
@@ -254,6 +271,7 @@ body{
     height: 100vh;
     float: right;
     width: calc(100% - 250px);
+
 }
 
 .regForm {
@@ -262,53 +280,67 @@ body{
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    padding: 20px 0 0 30px;
+    transition: all 0.3 ease;
+    padding: 20px 20px 0 30px;
 }
 
 .regForm label {
     font-size: 1.5rem;
-    color: var(--dark-grey);
+    color: var(--light);
 }
+
 
 .regForm .resType {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: var(--primary);
+    width: fit-content;
+
+}
+
+.regForm .resType span {
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 50px;
 }
 
 .regForm .resType .resButton {
     display: flex;
-    gap: 30px;
+    justify-content: flex-end;
+    gap: 10px;
+
+
 }
 
 .regForm .resType .resButton button {
     display: flex;
     flex-direction: column;
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 500;
     border: 1px solid var(--primary);
     background-color: var(--light);
-    padding: 10px;
-    border-radius: 10px;
-    width: 20vw;
+    border-radius: 5px;
+    width: fit-content;
+    height: 30px;
+    padding: 3px 5px 0 5px;
 }
 
 .regForm .resType .resButton button.active {
-    border-bottom: 10px solid var(--success);
+    background: var(--light-success);
     transition: all 1s ease;
 }
 
-.regForm .resType .resButton button span {
-    font-size: 15px;
-    font-weight: 300;
-}
+
 
 .regForm .table-info {
     height: auto;
     padding: 10px;
     border: 1px solid var(--primary);
     width: fit-content;
-    border-radius: 10px;
+    border-radius: 0 0 5px 5px;
     background-color: var(--light);
 
 }
@@ -339,50 +371,69 @@ body{
     background-color: var(--light);
 
 }
+
 .table-info table tbody tr td {
     padding: 10px;
     text-align: center;
 }
 
-.table-info table tbody tr td .resSelect{
+.table-info table tbody tr td .resSelect {
     width: 20px;
     height: 20px;
     border: 1px solid var(--primary)
 }
-input:checked{
-   color: var(--success);
+
+input:checked {
+    color: var(--success);
 }
+
 
 
 /* room no and select */
+.regForm .resType2 {
 
-.hostel{
+    border-radius: 5px;
     display: flex;
-    align-items: center;
-    gap:10%;
-    width: 100%;
-  
+    flex-direction: column;
+    gap: 10px;
 }
-.hostel .roomNum label{
+
+.hostel {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+
+    padding: 20px 20px 0 30px;
+    color: var(--light);
+
+}
+
+
+
+.hostel .roomNum label {
     color: var(--primary);
     font-size: 20px;
     font-weight: 500;
+    padding: 10px;
 }
-.hostel .roomNum .num{
+
+.hostel .roomNum .num {
     border-radius: 5px;
-    border: none;
+    border: 2px solid var(--primary);
     text-align: center;
-    padding: 10px;
-  
-}
-.hostel .submitReg{
-  margin-left:20% ;
+    padding: 5px;
+    font-size: 15px;
+    font-weight: 600;
+
 
 }
 
-.hostel .submitReg button{
+.hostel .submitReg {}
+
+.hostel .submitReg button {
     padding: 10px;
-    border-radius:10px ;
+    border-radius: 10px;
     background: var(--danger);
     font-size: 20px;
     color: var(--light);
@@ -391,97 +442,132 @@ input:checked{
     gap: 10px;
     align-items: center;
     border: none;
-    
+
 }
 
 /* block Bootstrap Css   */
-.list-choice {
-    width: 300px;
-    position: relative;
-    cursor: pointer;
+.hostel .list-choice {
+    padding-right: 10px;
+    display: flex;
+    gap: 10px;
+
 }
 
-.list-choice input[type="radio"] {
-    position: absolute;
-    left: -9999px;
-}
-
-.list-choice-title {
-    width: 100%;
-    display: block;
-    background: var(--light);
-    text-align: left;
-    font-size: 15px;
-    padding: 5px 10px 10px 10px;
-    color: var(--primary);
-    text-shadow: 0 1px 0 #CACACA;
-    border-radius: 5px;
+.hostel .list-choice label {
     border: 2px solid var(--primary);
-}
-
-.list-choice:hover .list-choice-title {
-    border-radius: 0.2em 0.2em 0 0;
-}
-
-.list-choice-objects label:nth-last-of-type(1) span {
-    border-radius: 0 0 0.2em 0.2em;
-}
-
-.list-choice input[type="radio"]+span {
+    padding: 5px;
+    font-size: 15px;
     color: var(--primary);
-    background: var(--light);
-    padding: 0 0 5px 0;
-    display: block;
+    border-radius: 10px;
+
+}
+
+.hostel .list-choice label input[type="radio"]:checked {
+    transition: all 0.3s ease;
+    background-color: var(--success);
+}
+
+.hostel button{
+    padding: 5px 20px 5px 20px;
+    background-color: var(--primary);
+    border-radius:15px;
+    border: 2px solid var(--success);
+    color: var(--light);
+}
+
+/* radio block selection css */
+
+.regForm .roomAvailable {
+    background-color: #0f0f0f;
+}
+
+.middle {
+    width: 100%;
     text-align: center;
-    box-sizing: border-box;
-    cursor: pointer;
-    width: 100%;
+
+    h1 {
+        /* font-family: $font; */
+        color: var(--light);
+    }
+
+    input[type="radio"] {
+        display: none;
+
+        &:checked {
+            +.box {
+                background-color: var(--success);
+
+                span {
+                    color: white;
+                    transform: translateY(70px);
+
+                    &:before {
+                        transform: translateY(0px);
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+
+    .box {
+        width: 200px;
+        height: 200px;
+        background-color: var(--light);
+        transition: all 250ms ease;
+        will-change: transition;
+        display: inline-block;
+        text-align: center;
+        cursor: pointer;
+        position: relative;
+        /* font-family: $font; */
+        font-weight: 900;
+
+        &:active {
+            transform: translateY(10px);
+        }
+
+        span {
+            position: absolute;
+            transform: translate(0, 60px);
+            left: 0;
+            right: 0;
+            transition: all 300ms ease;
+            font-size: 1.5em;
+            user-select: none;
+            color: var(--success);
+
+            &:before {
+                font-size: 1.2em;
+                font-family: FontAwesome;
+                display: block;
+                transform: translateY(-80px);
+                opacity: 0;
+                transition: all 300ms ease-in-out;
+                font-weight: normal;
+                color: white;
+            }
+        }
+    }
+
+    .front-end {
+        span {
+            &:before {
+                content: "\f121";
+            }
+        }
+    }
+
+    .back-end {
+        span {
+            &:before {
+                content: "\f0f4";
+            }
+        }
+    }
+
 }
 
-.list-choice-objects {
-    position: absolute;
-    top: 0;
-    padding-top: 2.1em;
-    box-sizing: border-box;
-    width: 100%;
-    overflow: hidden;
-    max-height: 0;
-    transition: all 250ms ease;
-}
-
-.list-choice:hover .list-choice-objects input[type="radio"]+span {
-    position: relative;
-    top: 15px;
-    transition: all 250ms ease-in-out;
-}
-
-.list-choice:hover input[type="radio"]+span:hover {
-    background: var(--dark-grey);
-}
-
-.list-choice:hover input[type="radio"]:checked+span:hover {
-    background: var(--success);
-}
-
-.list-choice input[type="radio"]:checked+span {
-   font-weight: 600;
-    position: absolute;
-    top: 0;
-    border-radius:5px;
-    border: 1px solid var(--primary);
-}
-
-.list-choice:hover input[type="radio"]:checked+span {
-    border-radius: 0;
-}
-
-.list-choice:hover .list-choice-objects label:nth-last-of-type(1) input[type="radio"]:checked+span {
-    border-radius: 0 0 0.2em 0.2em;
-}
-
-.list-choice:hover .list-choice-objects {
-    max-height: 540px;
-}
 
 
 
@@ -489,24 +575,17 @@ input:checked{
 
 
 
-@media (min-width:475px) {
-    
-}
-@media (min-width:640px) {
-    
-}
-@media (min-width:768px) {
-    
-}
-@media (min-width:1024px) {
-    
-}
-@media (min-width:1280px) {
-    
-}       
-@media (min-width:1536px) {
-    
-}     
+@media (min-width:475px) {}
+
+@media (min-width:640px) {}
+
+@media (min-width:768px) {}
+
+@media (min-width:1024px) {}
+
+@media (min-width:1280px) {}
+
+@media (min-width:1536px) {}
 
 /* student page ends */
 main {
@@ -515,8 +594,9 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-   
-} 
+
+}
+
 .login-container {
     display: flex;
     flex-direction: column;
