--- a/src/views/Layout/sideBar.ejs
+++ b/src/views/Layout/sideBar.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <!-- sidebar -->
-    <div class="sidebar">
+    <div class="sidebar ">
         <a href="#" class="logo">
             <i class='fas fa-school'></i>
             <div class="logo-name"><span>UHMS</span></div>
@@ -19,9 +19,9 @@
 
 
         <ul class="side-menu">
-            <li class="active"><a href="/index"> <i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
+            <li ><a href="/index"> <i class="fas fa-tachometer-alt"></i>Dashboard</a></li>
             <li ><a href="/student"><i class='fas fa-address-card'></i>Registration</a></li>
-            <li ><a href="#"><i class='fas fa-clipboard-list'></i>Exeat</a></li>
+            <li ><a href="/exeat"><i class='fas fa-clipboard-list'></i>Exeat</a></li>
             <li ><a href="#"><i class='fas fa-credit-card'></i>Payment</a></li>
             <li ><a href="#"><i class='fas fa-circle-info'></i>Support</a></li>
 
