completion of user registration into rooms

--- a/src/views/Layout/sideBar.ejs
+++ b/src/views/Layout/sideBar.ejs
@@ -27,7 +27,7 @@
 
         </ul>
         <ul class="side-menu out">
-            <li><a href="# " class="logout"><i class='fas fa-arrow-right-from-bracket '></i>Logout</a> </li>
+            <li><a href="/login " class="logout"><i class='fas fa-arrow-right-from-bracket '></i>Logout</a> </li>
         </ul>
     </div>
     <!-- end of sidebar -->
